# qwen3-4b-runner

./: .gitignore  Cargo.toml  README.md  build.sh  cuda-install.sh  run-cpu.sh  run-cuda-uncensored.sh  run-cuda.sh  setenv.cuda
.github/workflows/: build.yml
src/: main.rs  quantized_qwen3_5.rs  qwen3_5.rs
