[package]
name = "candle01"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
anyhow = "1.0.100"
candle-core = { path = "../candle/candle-core" }
candle-nn = { path = "../candle/candle-nn" }
candle-transformers = { path = "../candle/candle-transformers" }
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.28.1"
hf-hub = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rustyline = "17.0.2"
tokenizers = "0.22.2"
ureq = "3.2.0"
